# -Article-Quadrant-Analyzer-MCP-Server

./: .env.example  .gitignore  2X2分析prompt.md  CONFIGURATION.md  DOCUMENTATION_SUMMARY.md  MCP Server Spec-Driven Development Guide.md  QUICK_START.md  README.md  deploy_to_ide_standard.sh  pyproject.toml  test_simple_server.py
.trae/specs/article-quadrant-analyzer/: README.md  api-research.md  spec.md  tool-design.md  transport-decision.md
config/: config_cursor_standard.json  config_emacs.el  config_neovim.lua
src/mcp_server_article_quadrant/: __init__.py  server.py
src/mcp_server_article_quadrant/tools/: __init__.py  analyze_insights.py  extract_content.py  generate_quadrant.py
src/mcp_server_article_quadrant/utils/: __init__.py  content_extractor.py  error_handling.py  http_client.py  image_processor.py  quadrant_generator.py  text_analyzer.py
