[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-article-quadrant"
version = "1.0.0"
description = "An MCP server that extracts content from articles, performs insightful analysis, and generates visual 2x2 quadrant representations using SVG graphics"
authors = [
    {name = "Article Quadrant Analyzer", email = "noreply@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core MCP dependencies
    "fastmcp>=2.13.0",
    "pydantic>=2.10.0",
    "httpx>=0.27.0",

    # Content extraction
    "newspaper3k>=0.2.8",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.1",
    "lxml>=5.0.0",

    # Text analysis and NLP
    "nltk>=3.8.1",
    "spacy>=3.8.0",
    "transformers>=4.44.0",
    "torch>=2.5.0",
    "numpy>=1.24.0",

    # OCR and image processing
    "Pillow>=10.4.0",
    "pytesseract>=0.3.13",
    "easyocr>=1.7.1",
    "opencv-python>=4.10.0",

    # PDF processing
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",

    # HTTP and async
    "aiohttp>=3.11.0",
    "aiofiles>=24.1.0",

    # Data validation and serialization
    "jsonschema>=4.23.0",

    # Environment and configuration
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.6.0",

    # Text processing utilities
    "langdetect>=1.0.9",
    "textstat>=0.7.3",

    # Web scraping utilities
    "selenium>=4.26.0",
    "requests>=2.32.0",
    "user-agent>=0.1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.8.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
article-quadrant-analyzer = "mcp_server_article_quadrant.server:main"

[project.urls]
Homepage = "https://github.com/example/mcp-server-article-quadrant"
Repository = "https://github.com/example/mcp-server-article-quadrant"
Issues = "https://github.com/example/mcp-server-article-quadrant/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_article_quadrant"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mcp_server_article_quadrant"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "newspaper.*",
    "readability.*",
    "pytesseract.*",
    "easyocr.*",
    "cv2.*",
    "selenium.*",
    "nltk.*",
    "spacy.*",
    "transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]